# deskpp

./: .gitignore  CMakeLists.txt  README.md
src/: biurko.cpp  dialog_rezerwacji.cpp  dialog_rezerwacji.h  main.cpp  widok_rezerwacji.cpp  widok_rezerwacji.h
src/client/: dialog_rezerwacji.cpp  dialog_rezerwacji.h  komunikacja_klienta.cpp  komunikacja_klienta.h  main.cpp  main_client.cpp  widok_rezerwacji.cpp  widok_rezerwacji.h
src/client/model/: booking.cpp  booking.h  desk.cpp  desk.h  models.cpp  models.h  user.cpp  user.h
src/client/net/: api_client.cpp  api_client.h  client_communication.cpp  client_communication.h
src/client/ui/: admin_dialog.cpp  admin_dialog.h  booking_dialog.cpp  booking_dialog.h  booking_view.cpp  booking_view.h  login_dialog.cpp  login_dialog.h
src/client/util/: app_settings.h  client_error.h  cmd_args.h  logger.h
src/common/: app_settings.h  biurko.h  entity.h  logger.h  models.cpp  models.h  repository.h
src/common/model/: booking.cpp  booking.h  building.cpp  building.h  desk.cpp  desk.h  entity.h  model.h  user.cpp  user.h
src/server/: kontroler_serwera.cpp  kontroler_serwera.h  logger.h  main.cpp  main_server.cpp
src/server/api/: api_routes.cpp  base_controller.h  booking_controller.cpp  booking_controller.h  controllers.cpp  controllers.h  routes.cpp  routes.h  routing.cpp  routing.h  user_controller.cpp  user_controller.h
src/server/api/controller/: admin_controller.cpp  admin_controller.h  booking_controller.cpp  booking_controller.h  controller.cpp  controller.h  user_controller.cpp  user_controller.h
src/server/db/: database.cpp  database.h
src/server/model/: booking.cpp  booking.h  building.cpp  building.h  desk.cpp  desk.h  models.cpp  models.h  user.cpp  user.h
src/server/repository/: base_repository.h  booking_repository.cpp  booking_repository.h  building_repository.cpp  building_repository.h  desk_repository.cpp  desk_repository.h  repository.h  sqlite_repository.h  user_repository.cpp  user_repository.h
src/server/service/: base_service.h  booking_service.cpp  booking_service.h  service.h  services.cpp  services.h  user_service.cpp  user_service.h
src/server/util/: app_settings.h  cmd_args.h  date_helper.cpp  date_helper.h  logger.h
